# check24-challenge

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  init.sql  postgresql.conf  run.sh
backend/: Dockerfile  database.db  init.py  main.py  models.py  pyproject.toml  region.py  region_array.json  start.sh
test/: Dockerfile  app.py
test/data/: data_convert.py  output.jsonl
