[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Taiki Okano <taiki@okano.tokyo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.1"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
